@@ -1,6 +1,8 @@
 Version 0.5.0~dev
 
 	* Rewrite action API.
+	* Add stdout and stderr buffers to Worker class and implement
+	  get_error method.
 
 Version 0.4.0 Released on 2012/01/16
 
